packages/infra/manifests/apps/base/workload.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: app
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
        app.kubernetes.io/instance: app
        app: app
    spec:
      containers:
        - name: app
          image: 302481198387.dkr.ecr.us-east-1.amazonaws.com/app:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: '256Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '250m'
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: app
    app: app
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
