packages/infra/manifests/apps/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-http
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: app
    app: app
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: networking
      sectionName: web
  hostnames:
    - app.ariaamini.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-https
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: app
    app: app
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: networking
      sectionName: websecure
  hostnames:
    - app.ariaamini.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: app-service
          port: 80
